--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/material": "^5.11.2",
     "cypress": "^10.0.3",
     "next": "^12.1.5",
     "react": "^18.0.0",
